# devynix-pm-tool

./: docker-compose.yml
backend/: .env copy  Dockerfile  pyproject.toml
backend/apps/kanban/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/kanban/api/: __init__.py  urls.py
backend/apps/kanban/api/serializers/: kanban_board.py  kanban_card.py  kanban_column.py
backend/apps/kanban/api/views/: kanban_board.py  kanban_card.py  kanban_column.py
backend/apps/kanban/migrations/: 0001_initial.py
backend/apps/notebooks/: admin.py  models.py  urls.py  views.py
backend/apps/notebooks/api/: urls.py
backend/apps/notebooks/api/serializers/: notebook.py
backend/apps/notebooks/api/views/: notebook.py
backend/apps/notebooks/migrations/: 0001_initial.py
backend/apps/projects/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/projects/api/: urls.py
backend/apps/projects/api/serializers/: node.py  project.py
backend/apps/projects/api/views/: node.py  project.py
backend/apps/projects/migrations/: 0001_initial.py
backend/core/: asgi.py  settings.py  urls.py  wsgi.py
backend/core/settings/: base.py  local.py  production.py
frontend/: .gitignore  Dockerfile  components.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx
frontend/src/app/(DashboardLayout)/: layout.tsx  page.tsx
frontend/src/app/api/: globalFetcher.ts
frontend/src/app/components/shared/: CardBox.tsx
frontend/src/app/css/: globals.css
frontend/src/app/css/override/: reboot.css
frontend/src/hooks/: use-toast.ts
(+21 files in other folders)
